# gst-plugins-imsdk-wtempy

./: .gitignore  CMakeLists.txt  README.md  config.h  config.h.in  qtighost.hpp
build-base/: CMakeCache.txt
ghost/: .gitignore  CMakeLists.txt  README.md  opencv_processor.py  qtighost.cpp  yolov5_processor.py
ghost/inc/: ppfuncs.h  pptypes.h
ghost/notes/: PyInterpreter.md  caps_neg.md  order_of_exec.md
ghost/src/: ppfuncs.c
inc/: ovld.h  pyrelated.h  qtitempy.h
notes/: PyExectuion.md
src/: ovld.c  py_related.c  qtitempy.c
